# mrrpropy

./: .gitignore  LICENSE  README.md  pyproject.toml
mrrpropy/: RGB_hexagram_tutorial_for_generation.py  __init__.py  raw_class.py  utils.py
tests/mrr/: test_1_load_raw.py  test_2_plots_raw.py  test_3_raprompro.py  test_4_plots_raprompro.py  test_5_rain_processes.py  test_6_plot_rain_classification.py  test_hexagram.py  test_microphysical_processes_in_rain.py  test_plot_rain_process.py  test_plots_processed.py  test_raw_class.py
