[project]
name = "mrrpro"
dynamic = ["version"]
description = "A python package for MRR PRO analysis and processing."
authors = [{ name = "Juan Antonio Bravo Aranda", email = "jabravo@ugr.es" }]
requires-python = ">=3.11.11,<3.12"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "numpy>=2.0.2,<2.1",
    "pandas>=2.1.2",
    "matplotlib>=3.10.0",
    "scipy>=1.13.1,<2",
    "netCDF4>=1.7.2,<2",
    "loguru>=0.7.0,<1",
    "xarray>=2025.1.2,<2026",
    "dask>=2024.11.2,<2025",
    "typer>=0.15.1,<1",
    "PyYAML>=6.0.2,<7",
    "requests>=2.32.3,<3",
    "notebook>=6.5.5,<7",
    "ipywidgets>=7.7.1,<9",
    "typing-extensions>=4.12.0,<5",
    "seaborn>=0.13.2,<0.14",
    "numba>=0.60.0,<1",
    "pyarrow>=18.1.0,<19",
    "statsmodels>=0.14.4,<0.15",
    "distributed>=2024.12.1",
    "miepython>=3.0.5",
]

[project.optional-dependencies]
docs = ["pdoc>=15.0.1,<16"]
jupyter = []

[project.urls]
Homepage = "https://github.com/jabravoaranda/mrrpro"

[project.scripts]
mrrpro = "mrrpro.cli.main:app"

[dependency-groups]
dev = [
    "black>=22.6.0,<23",
    "pytest>8,<8.3.5",
    "pre-commit>=2.20.0,<3",
    "pykalman>=0.9.5,<0.10",
    "pyts>=0.11.0,<0.12",
]

[tool.hatch.build.targets.sdist]
include = ['/README.md', '/tests', '/pyproject.toml', '/LICENSE', '/MANIFEST.in', '/CHANGELOG.md', '.pre-commint-config.yaml']
# exclude = ['/tests/data/RAW']

[tool.hatch.build.targets.wheel]
include = ["mrrpropy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mrrpropy/__init__.py"
